--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Encoding & decoding functions for the Stacks blockchain exposed as a fast native Node.js addon",
   "main": "index.js",
   "scripts": {
-    "build-cargo": "node build.js",
-    "build-ts": "tsc",
-    "build": "npm run build-ts && npm run build-cargo",
-    "build:dev": "npm run build-ts && npm run build-cargo -- dev",
+    "build:cargo": "node build.js",
+    "build:ts": "tsc",
+    "build": "npm run build:ts && npm run build:cargo",
+    "build:dev": "npm run build:ts && npm run build:cargo -- dev",
     "test:cargo": "cargo test",
     "test:js": "jest",
     "test": "npm run test:js",
