--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "stacks-encoding-native-js",
   "version": "0.1.0",
   "description": "Encoding & decoding functions for the Stacks blockchain exposed as a fast native Node.js addon",
-  "main": "scripts/index.js",
+  "main": "index.js",
   "scripts": {
-    "build:cargo": "node scripts/build.js",
+    "build:cargo": "node build.js",
     "build:ts": "tsc",
     "build": "npm run build:ts && npm run build:cargo",
     "build:dev": "npm run build:ts && npm run build:cargo -- dev",
@@ -32,10 +32,10 @@
   },
   "files": [
     "native/**/*",
-    "scripts/index.js",
-    "scripts/index.d.ts",
-    "scripts/loader.js",
-    "scripts/loader.d.ts"
+    "index.js",
+    "index.d.ts",
+    "loader.js",
+    "loader.d.ts"
   ],
   "jest": {
     "preset": "ts-jest",
