--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         # if: ${{ env.INCLUDE_BUILD == 'true' }}
+      - uses: actions-rs/toolchain@v1
       - name: Run on architecture
         # if: ${{ env.INCLUDE_BUILD == 'true' }}
         uses: uraimo/run-on-arch-action@v2.2.0
@@ -59,8 +60,10 @@ jobs:
           # githubToken: ${{ github.token }}
           setup: |
             mkdir -p "${PWD}/artifacts"
+            cargo fetch --target aarch64-unknown-linux-musl
           dockerRunArgs: |
             --volume "${PWD}/artifacts:/artifacts"
+            --volume "$HOME/.cargo:/root/.cargo"
           shell: /bin/ash
           install: |
             apk update
@@ -71,7 +74,6 @@ jobs:
           # Produce a binary artifact and place it in the mounted volume
           run: |
             source $HOME/.cargo/env
-            cargo fetch --target aarch64-unknown-linux-musl --verbose
             cargo build --release --offline --verbose
             cp target/release/libstacks_encoding_native_js.so /artifacts/linux-arm64-musl.node
       - uses: actions/upload-artifact@v2
