--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,8 @@ jobs:
       - uses: actions/checkout@v2
         # if: ${{ env.INCLUDE_BUILD == 'true' }}
       - uses: actions-rs/toolchain@v1
+      - name: Cargo fetch
+        run: cargo fetch --target aarch64-unknown-linux-musl
       - name: Run on architecture
         # if: ${{ env.INCLUDE_BUILD == 'true' }}
         uses: uraimo/run-on-arch-action@v2.2.0
@@ -60,7 +62,6 @@ jobs:
           # githubToken: ${{ github.token }}
           setup: |
             mkdir -p "${PWD}/artifacts"
-            cargo fetch --target aarch64-unknown-linux-musl
           dockerRunArgs: |
             --volume "${PWD}/artifacts:/artifacts"
             --volume "$HOME/.cargo:/root/.cargo"
