--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/jest": "^27.4.1",
     "cargo-cp-artifact": "^0.1",
     "jest": "^27.5.1",
-    "open": "^8.4.0",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
@@ -47,6 +46,8 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "roots": ["<rootDir>/tests"]
+    "roots": [
+      "<rootDir>/tests"
+    ]
   }
 }
