--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,15 +49,8 @@ jobs:
       INCLUDE_BUILD: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.include-linux-arm64-musl == 'true' }}
     steps:
       - uses: actions/checkout@v2
-        if: ${{ env.INCLUDE_BUILD == 'true' }}
       - uses: actions-rs/toolchain@v1
-        if: ${{ env.INCLUDE_BUILD == 'true' }}
-      - name: Cargo fetch
-        if: ${{ env.INCLUDE_BUILD == 'true' }}
-        # perform cargo fetch on host to avoid OOM inside qemu
-        run: cargo fetch --target aarch64-unknown-linux-musl
       - name: Run on architecture
-        if: ${{ env.INCLUDE_BUILD == 'true' }}
         uses: uraimo/run-on-arch-action@v2.2.0
         with:
           arch: aarch64
@@ -76,10 +69,10 @@ jobs:
           # Produce a binary artifact and place it in the mounted volume
           run: |
             source $HOME/.cargo/env
+            export CARGO_NET_GIT_FETCH_WITH_CLI=true
             cargo build --release --offline --verbose
             cp target/release/libstacks_encoding_native_js.so /artifacts/linux-arm64-musl.node
       - uses: actions/upload-artifact@v2
-        if: ${{ env.INCLUDE_BUILD == 'true' }}
         with:
           name: linux-arm64-musl
           path: artifacts/linux-arm64-musl.node
