ci: test compiled artifact on arch, attempt 2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -220,6 +220,8 @@ jobs:
         working-directory: native
       - name: npm i
         run: npm i
+      - name: npm build:ts
+        run: npm run build:ts
       - name: Test js
         run: npm run test:js
       - name: Test examples
