--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,12 +95,11 @@ jobs:
 
   build_linux-x64-glibc:
     runs-on: ubuntu-latest
+    container:
+      image: node:16-stretch
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
       - name: npm i
         run: npm i
       - name: Build
