--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:16-stretch
+      options: --user root
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
