ci: test compiled artifact on arch, attempt 6

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,6 +99,8 @@ jobs:
       image: node:16-stretch
       options: --user root
     steps:
+      - name: Change Owner of Container Working Directory
+        run: chown <uid>:<gid> .
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
