--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,10 +97,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:16-stretch
-      options: --user root
+      options: --user github
     steps:
-      - name: Change Owner of Container Working Directory
-        run: chown <uid>:<gid> .
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
