ci: test compiled artifact on alpine, attempt 2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -232,6 +232,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:16-alpine
+    needs:
+      - build_linux-x64-musl
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
