--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: build
+name: CI
 
 on:
   push:
@@ -239,6 +239,46 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: linux-x64-musl
+          path: native
+      - name: npm i
+        run: npm i
+      - name: Build js
+        run: npm run build:ts
+      - name: Test js
+        run: npm run test:js
+      - name: Test examples
+        working-directory: examples
+        run: npm i && npm test
+
+  test_win-x64:
+    runs-on: windows-2022
+    needs:
+      - build_win-x64
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: win32-x64
+          path: native
+      - name: npm i
+        run: npm i
+      - name: Build js
+        run: npm run build:ts
+      - name: Test js
+        run: npm run test:js
+      - name: Test examples
+        working-directory: examples
+        run: npm i && npm test
+
+  test_darwin-x64:
+    runs-on: macos-latest
+    needs:
+      - build_darwin-x64
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: darwin-x64
           path: native
       - name: npm i
         run: npm i
