--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,6 @@ on:
       npm-package-tag:
         description: Specify the tag to be used for npm publish, e.g. `latest`, `beta`, `alpha`
         required: true
-      include-linux-arm64-musl:
-        description: 'Build the linux-arm64-musl artifact, can take up to 2 hours'
-        required: true 
-        type: boolean
-        default: true
 
 jobs:
   cancel-previous-runs:
@@ -205,6 +200,29 @@ jobs:
           name: darwin-arm64
           path: native/darwin-arm64.node
           if-no-files-found: error
+
+  test_linux-arm64-glibc:
+    runs-on: ubuntu-latest
+    needs:
+      - build_linux-arm64-glibc
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: linux-x64-glibc
+          path: native
+      - name: npm i
+        run: npm i
+      - name: Build js
+        run: npm run build:ts
+      - uses: uraimo/run-on-arch-action@v2
+        name: Run on arch
+        with:
+          arch: aarch64
+          distro: ubuntu_latest
+          githubToken: ${{ github.token }}
+          run: |
+            npm run test:js
 
   test_linux-x64-glibc:
     runs-on: ubuntu-latest
