--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -209,7 +209,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-          name: linux-x64-glibc
+          name: linux-arm64-glibc
           path: native
       - name: npm i
         run: npm i
@@ -225,6 +225,31 @@ jobs:
             apt-get update && apt-get install -y curl
             curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
             apt-get install -y --no-install-recommends nodejs
+          run: |
+            npm run test:js
+
+  test_linux-arm64-musl:
+    runs-on: ubuntu-latest
+    needs:
+      - build_linux-arm64-musl
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: linux-arm64-musl
+          path: native
+      - name: npm i
+        run: npm i
+      - name: Build js
+        run: npm run build:ts
+      - uses: uraimo/run-on-arch-action@v2
+        name: Run on arch
+        with:
+          arch: aarch64
+          distro: alpine_latest
+          githubToken: ${{ github.token }}
+          install: |
+            apk add nodejs npm
           run: |
             npm run test:js
 
