--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@types/node": "^16.11.26",
-    "detect-libc": "^2.0.1"
+    "@types/node": "^16.11.26"
   },
   "files": [
     "README.md",
