--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.x86_64-unknown-linux-musl]
-rustflags = ["-C", "target-feature=-crt-static"]
+rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-lgcc"]
 
 [target.aarch64-unknown-linux-musl]
-rustflags = ["-C", "target-feature=-crt-static"]
+rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-lgcc"]
