Revert "ci: use musl library for all linux platforms"
This reverts commit 68cb6e45ff3c3329e91f694af8d19993e887cb8d.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@types/node": "^16.11.26"
+    "@types/node": "^16.11.26",
+    "detect-libc": "^2.0.1"
   },
   "files": [
     "README.md",
