--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -236,9 +236,7 @@ jobs:
           distro: ubuntu_latest
           githubToken: ${{ github.token }}
           install: |
-            apt-get update && apt-get install -y curl
-            curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
-            apt-get install -y --no-install-recommends nodejs
+            apt-get update && apt-get install -y --no-install-recommends nodejs npm
           run: |
             npm run test:js
 
