--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   cancel-previous-runs:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
@@ -21,7 +21,7 @@ jobs:
           access_token: ${{ github.token }}
 
   build_linux-x64-musl:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -56,7 +56,7 @@ jobs:
           if-no-files-found: error
 
   build_linux-arm64-musl:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -91,7 +91,7 @@ jobs:
           if-no-files-found: error
 
   build_linux-x64-glibc:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
       image: rust:buster
     steps:
@@ -114,7 +114,7 @@ jobs:
           if-no-files-found: error
 
   build_linux-arm64-glibc:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
       image: rust:buster
     steps:
@@ -217,7 +217,7 @@ jobs:
           if-no-files-found: error
 
   test_linux-arm64-glibc:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs:
       - build_linux-arm64-glibc
     steps:
@@ -244,7 +244,7 @@ jobs:
             npm run test:js
 
   test_linux-arm64-musl:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs:
       - build_linux-arm64-musl
     steps:
@@ -269,7 +269,7 @@ jobs:
             npm run test:js
 
   test_linux-x64-glibc:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
       image: node:16-bullseye
     needs:
@@ -291,7 +291,7 @@ jobs:
         run: npm i && npm test
 
   test_linux-x64-musl:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
       image: node:16-alpine
     needs:
@@ -354,7 +354,7 @@ jobs:
         run: npm i && npm test
 
   npm-package:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs:
       - build_linux-x64-musl
       - build_linux-arm64-musl
